# rustereum

./: .gitignore  AGENT.md  Cargo.toml  README.md  render.yaml
.github/workflows/: ci.yml
.serena/: project.yml
crates/rustereum/: Cargo.toml
crates/rustereum-cli/: Cargo.toml  README.md
crates/rustereum-cli/src/: lib.rs  main.rs
crates/rustereum-cli/tests/: cli.rs
crates/rustereum-macros/: Cargo.toml
crates/rustereum-macros/src/: lib.rs
crates/rustereum/src/: driver.rs  ir.rs  lib.rs  lower.rs  solidity.rs  testing.rs  vm.rs
crates/rustereum/tests/: access_control.rs  macro_client.rs  macro_expands.rs  macro_inheritance.rs  ui.rs
crates/rustereum/tests/ui/: field_type.rs  field_type.stderr  fn_param.rs  fn_param.stderr  let_binding.rs  let_binding.stderr  param_type.rs  param_type.stderr  return_type.rs  return_type.stderr
docs/plans/: 2026-07-09-rustereum-counter-implementation.md  2026-07-09-rustereum-inheritance-and-cli-design.md  2026-07-09-rustereum-inheritance-cli-implementation.md  2026-07-09-rustereum-rust-to-yul-dsl-design.md
examples/: Cargo.toml  README.md
examples/adder/: Cargo.toml
examples/adder/src/: lib.rs
examples/counter/: Cargo.toml
examples/counter/src/: lib.rs
examples/openzeppelin/: README.md
examples/openzeppelin/access-control/: Cargo.toml  rustereum.toml
examples/openzeppelin/access-control/src/: bindings.rs  lib.rs
examples/openzeppelin/erc1155/: Cargo.toml
examples/openzeppelin/erc1155/src/: bindings.rs  lib.rs
examples/openzeppelin/erc165/: Cargo.toml
examples/openzeppelin/erc165/src/: bindings.rs  lib.rs
examples/openzeppelin/erc1967-proxy/: Cargo.toml
examples/openzeppelin/erc1967-proxy/src/: bindings.rs  lib.rs
examples/openzeppelin/erc20/: Cargo.toml
examples/openzeppelin/erc20/src/: bindings.rs  lib.rs
examples/openzeppelin/erc721/: Cargo.toml
examples/openzeppelin/erc721/src/: bindings.rs  lib.rs
examples/openzeppelin/ownable/: Cargo.toml
examples/openzeppelin/ownable/src/: lib.rs
examples/openzeppelin/pausable/: Cargo.toml
examples/openzeppelin/pausable/src/: bindings.rs  lib.rs
examples/openzeppelin/reentrancy-guard/: Cargo.toml
examples/openzeppelin/reentrancy-guard/src/: bindings.rs  lib.rs
examples/ownable-counter/: Cargo.toml
examples/ownable-counter/src/: bindings.rs  lib.rs
examples/src/: adder.rs  lib.rs  ownable_counter.rs
