[workspace]
resolver = "2"
members = [
    "crates/rustereum",
    "crates/rustereum-macros",
    "crates/rustereum-cli",
    "examples/counter",
    "examples/adder",
    "examples/openzeppelin/ownable",
    "examples/openzeppelin/pausable",
    "examples/openzeppelin/reentrancy-guard",
    "examples/openzeppelin/access-control",
]

[workspace.dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
alloy-primitives = "0.8"
tiny-keccak = { version = "2", features = ["keccak"] }
foundry-compilers = { version = "0.11", features = ["svm-solc"] }
revm = "14"
serde_json = "1"
semver = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
