[package]
name = "rustereum-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustereum"
path = "src/main.rs"

[lib]
name = "rustereum_cli"
path = "src/lib.rs"

[dependencies]
clap = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tempfile = "3"
